
20160107 dholland in base
   - Don't take vfs_biglock in vnode_check(). It isn't safe (e.g. it
     can deadlock when paging once you have a VM system) and the
     things vnode_check() looks at are supposed to be constant fields
     anyway. If they aren't actually constant because of bugs, reading
     a stale or even garbage value is not going to hurt more.

20160107 dholland in base
   - In testbin/multiexec, if fork fails partway through, continue
     with the forks we got. Otherwise the subprocesses we started hang
     around forever, and there's no way to kill them.

20160106 dholland in all
   - New format for CHANGES that admits longer descriptions, and that
     deals better with having many branches and patches.
   - Merge all the branch CHANGES.* files into the main CHANGES, as
     having multiple CHANGES files was never desirable.


OS/161 2.0.1 released 20150805
------------------------------

20150804 dholland in base
   - Improve multiexec's error reporting.

20150804 dholland in base
   - Minor fixes to frack check.

20150722 dholland in base
   - Add assertions to dumbvm to check that sleeping is ok in various
     contexts where real VM systems typically sleep.

20150722 dholland in base
   - Initialize curcpu/curthread a bit earlier.

20150721 dholland in base
   - Remove proc->p_threads[] array. Just count the number of threads
     in each proc. This is enough to get going on, and it's easy for
     students to add and synchronize an explicit array of threads
     themselves if they want it. (It needs a sleeplock; but by that
     point they'll have those. We don't out of the box though.)

20150713 dholland in base
   - Make all sfs prints/panics include the volume name.

20150713 dholland in base
   - Have sfsck print invalid inode type values instead of just saying
     "invalid".

20150713 dholland in base
   - Have forktest print ABCD instead of 1234 for clarity.

20150713 dholland in base