@@ -4,6 +4,7 @@
 include conf/conf.kern		# get definitions of available options
 
 debug				# Compile with debug info.
+#options hangman 		# Deadlock detection. (off by default)
 
 #
 # Device drivers for hardware.
